<resources>
    <string name="app_name">QuizApp</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">START</string>
    <string name="welcome">Welcome</string>
    <string name="quizapp">QuizApp</string>
    <string name="sr1">Score:</string>
    <string name="sr2">/10</string>
    <string name="nepal">Nepal</string>
    <string name="iran">Iran</string>
    <string name="india">India</string>
    <string name="_1_which_country_does_this_flag_belongs_to">(1) Which country does this flag belongs to?</string>
    <string name="south_korea">South Korea</string>
    <string name="japan">Japan</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="bhutan">Bhutan</string>
    <string name="_02_which_country_does_this_flag_belongs_to">(02) Which country does this flag belongs to?</string>
    <string name="_02">02</string>
    <string name="_01">01</string>
    <string name="_03_which_organisation_does_this_flag_belongs_to">(03) Which organisation does this flag belongs to?</string>
    <string name="_03">03</string>
    <string name="who">WHO</string>
    <string name="un">UN</string>
    <string name="brics">BRICS</string>
    <string name="wto">WTO</string>
    <string name="_04_which_country_does_this_flag_belongs_to">(04) Which country does this flag belongs to?</string>
    <string name="_04">04</string>
    <string name="brazil">Brazil</string>
    <string name="australia">Australia</string>
    <string name="malaysia">Malaysia</string>
    <string name="guyana">Guyana</string>
    <string name="_05_which_country_does_this_flag_belongs_to">(05) Which country does this flag belongs to?</string>
    <string name="_05">05</string>
    <string name="netherlands">Netherlands</string>
    <string name="iraq">Iraq</string>
    <string name="france">France</string>
    <string name="russia">Russia</string>
    <string name="_06_which_country_does_this_flag_belongs_to">(06) Which country does this flag belongs to?</string>
    <string name="_06">06</string>
    <string name="norway">Norway</string>
    <string name="usa">USA</string>
    <string name="uk">UK</string>
    <string name="iceland">Iceland</string>
    <string name="_07_which_country_does_this_flag_belongs_to">(07) Which country does this flag belongs to?</string>
    <string name="_07">07</string>
    <string name="_08_which_country_does_this_flag_belongs_to">(08) Which country does this flag belongs to?</string>
    <string name="_08">08</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="syria">Syria</string>
    <string name="nigeria">Nigeria</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="_09_which_country_does_this_flag_belongs_to">(09) Which country does this flag belongs to?</string>
    <string name="_09">09</string>
    <string name="vietnam">Vietnam</string>
    <string name="_10">10</string>
    <string name="unsc">UNSC</string>
    <string name="nato">NATO</string>
    <string name="unicef">UNICEF</string>
    <string name="_10_which_organisation_does_this_flag_belongs_to">(10) Which organisation does this flag belongs to?</string>
    <string name="ss">ss</string>
</resources>